Add support for color temperature properties.
Fixes #58

--- a/index.html
+++ b/index.html
@@ -594,7 +594,6 @@ Sec-WebSocket-Protocol: webthing</pre>
             <td>No</td>
           </tr>
         </table>
-        <h3>
       </section>
       <section>
         <h3><code>onOffSwitch</code> type</h3>
@@ -656,7 +655,6 @@ Sec-WebSocket-Protocol: webthing</pre>
             <td>No</td>
           </tr>
         </table>
-        <h3>
       </section>
       <section>
         <h3><code>multilevelSwitch</code> type</h3>
@@ -1044,7 +1042,14 @@ Sec-WebSocket-Protocol: webthing</pre>
             <td>String</td>
             <td>n/a</td>
             <td>Hexadecimal RGB color code (e.g. #FF0000)</td>
-            <td>Yes</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td><strong><code>colorTemperature</code></strong></td>
+            <td>Number</td>
+            <td>"kelvin"</td>
+            <td>Any color temperature value valid for the thing</td>
+            <td>No</td>
           </tr>
         </table>
       </section>
@@ -1106,7 +1111,14 @@ Sec-WebSocket-Protocol: webthing</pre>
             <td>String</td>
             <td>n/a</td>
             <td>Hexadecimal RGB color code (e.g. #FF0000)</td>
-            <td>Yes</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td><strong><code>colorTemperature</code></strong></td>
+            <td>Number</td>
+            <td>"kelvin"</td>
+            <td>Any color temperature value valid for the thing</td>
+            <td>No</td>
           </tr>
         </table>
       </section>
