Add href to Things resource for each thing - closes #64

--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@ Accept: application/json</pre>
       "reboot": {
         "description": "Going down for reboot"
       }
-    }
+    },
+    "href": "/things/pi"
   }
 ]</pre>
       </div>
