Add oneOf support.
Fixes #121

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
             <li>A <code>title</code> (A string providing a human friendly name)</li>
             <li>A <code>description</code> (A string providing a human friendly description)</li>
             <li>A <code>links</code> array (An array of <a href="#link-object">Link object</a>s linking to one or more representations of a <a href="#property-resource">Property resource</a>, each with an implied default <code>rel=property</code>.)</li>
-            <li><code>enum</code> (an enumeration of possible values for the property)</li>
+            <li><code>enum</code> (An enumeration of possible values for the property)</li>
+            <li><code>oneOf</code> (A more complex enumeration which includes support for multiple types, as well as value labels)</li>
             <li><code>readOnly</code> (A boolean indicating whether or not the property is read-only, defaulting to false)</li>
             <li>A <code>minimum</code> and <code>maximum</code> (numeric values)</li>
             <li><code>multipleOf</code> (A number indicating what the value must be a multiple of)</li>
