example: Align to virtual lamp
Change-Id: I5778704d2762116ea85dc117ddec41b8b610197a
Relate-to: https://github.com/mozilla-iot/virtual-things-adapter/pull/35#
Signed-off-by: Philippe Coval <p.coval@samsung.com>

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       "description": "Whether the lamp is turned on",
       "links": [{"href": "/things/lamp/properties/on"}]
     },
-    "brightness" : {
+    "level" : {
       "@type": "BrightnessProperty",
       "type": "integer",
       "title": "Brightness",
